apps/oxlint/src/snapshots/_--import-plugin -c fixtures__tsconfig_discovery__.oxlintrc.json fixtures__tsconfig_discovery__packages__lib__src__bad_import.ts@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --import-plugin -c fixtures/tsconfig_discovery/.oxlintrc.json fixtures/tsconfig_discovery/packages/lib/src/bad_import.ts
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 89 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
